# mets-reader-writer

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  CONTRIBUTING.md  MANIFEST.in  Makefile  README.md  README.rst  mets.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  test_mets.py  tox.ini
.github/workflows/: release.yml  test.yml
docs/: conf.py  examples.rst  index.rst  mets.rst  metsrw.plugins.premisrw.rst  metsrw.plugins.rst  metsrw.rst  modules.rst  reading-mets.rst  tests.plugins.premisrw.rst  tests.plugins.rst  tests.rst  writing-mets.rst
fixtures/: complete_mets.xml  complete_mets_2.xml  createdate_too_new.xml  dmdsecs_mets.xml  mets_directory_amd.xml  mets_empty_dirs.xml  mets_invalid_xlink_hrefs.xml  mets_structmap_arranged_sip.xml  mets_structmap_imported.xml  mets_with_dmdsecs_in_filesec.xml  mets_with_missing_bag_metadata_amdsec.xml  mets_without_groupid_in_file.xml  production-aip-mets-file.xml  production-pointer-file.xml  transfer_mets.xml
metsrw/: __init__.py  di.py  exceptions.py  fsentry.py  fsentrymetadataparser.py  metadata.py  mets.py  utils.py  validate.py
metsrw/plugins/: __init__.py
metsrw/plugins/dcrw/: __init__.py  dc.py  exceptions.py  utils.py
metsrw/plugins/premisrw/: README.rst  __init__.py  premis.py  utils.py
metsrw/plugins/yapremisrw/: __init__.py  event.py  exceptions.py  object.py  utils.py
metsrw/premis/: __init__.py  event.py  object.py
metsrw/resources/: archivematica_mets_pointer_file_schematron.xml  archivematica_mets_schematron.xml  mets.xsd
requirements/: base.txt  dev.txt
scripts/: mets_server
tests/: conftest.py  constants.py  helpers.py  test_custom_structmap.py  test_dependency_injection.py  test_dublincore.py  test_fsentry.py  test_mdwrap.py  test_metadata.py  test_mets.py  test_normative_structmap.py  test_premis_event.py  test_premis_object.py  test_utils.py  test_validate.py
tests/plugins/dc/: test_dublincore.py
tests/plugins/premisrw/: test_premis.py
tests/plugins/yapremisrw/: test_event.py  test_object.py
